--- a/hei.html
+++ b/hei.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hei Adrian</h1>
-    <p>Nå er jeg klar for å ta mitt eget liv!</p>
+    <p>Nå er jeg klar for å ta vare på meg selv!</p>
 </body>
 </html>
