--- a/hei.html
+++ b/hei.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hei Adrian</h1>
+    <h2>Min fysta nettsidå</h2>
     <p>Nå er jeg klar for å ta vare på meg selv!</p>
 </body>
 </html>
